Update some style and name.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Angular 2 QuickStart</title>
+    <title>Angular 2 Basic Project</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
@@ -20,6 +20,6 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <test-app>Loading...</test-app>
+    <root-app>Loading...</root-app>
   </body>
 </html>
